# LaboratorioDiProgrammazione

./: .gitignore  CMakeLists.txt  Item.cpp  Item.h  Observer.h  ShoppingList.cpp  ShoppingList.h  Subject.h  User.cpp  User.h  main.cpp
test/: CMakeLists.txt  ItemTest.cpp  ObserverTest.cpp  ShoppingListFixture.cpp  UserFixture.cpp  runAllTests.cpp
